# solar-system-builder

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  io.github.jackrabbithanna.solarsystembuilder.json  meson.build  requirements.txt
data/: io.github.jackrabbithanna.solarsystembuilder.desktop.in  io.github.jackrabbithanna.solarsystembuilder.gschema.xml  io.github.jackrabbithanna.solarsystembuilder.metainfo.xml.in  io.github.jackrabbithanna.solarsystembuilder.service.in  meson.build
docs/: ALPHA_CENTAURI_PRESET.md  ARCHITECTURE_RECOMMENDATIONS  CODEBASE_OVERVIEW.md  DECISIONS.md  FLATPAK_AND_NUMPY.md  GTK_PLAYBACK.md  NEXT_STEPS.md  ORBITAL_DATA.md  PHYSICS.md  REFERENCE_FRAMES.md  USER_INTERFACE.md
po/: POTFILES.in  meson.build
scripts/: generate_alpha_centauri_preset.py  update_solar_system_preset.py
src/: analysis_frames.py  canvas.py  constants.py  documents.py  flybys.py  frame_exports.py  hierarchy.py  horizons.py  main.py  meson.build  models.py  orbit_editing.py  orbits.py  physics.py  playback.py  presets.py  reference_frames.py  scales.py  sidebar.py  solar-system-builder.gresource.xml  solar-system-builder.in  standard_frames.py  storage.py  (+5 more)
tests/: meson.build  test_analysis_frames.py  test_documents.py  test_flybys.py  test_frame_exports.py  test_hierarchy.py  test_horizons.py  test_models.py  test_orbit_editing.py  test_orbits.py  test_physics.py  test_playback.py  test_reference_frames.py  test_standard_frames.py  test_storage.py  test_system_editing.py  test_system_library.py  test_update_solar_system_preset.py  test_viewport.py
(+4 files in other folders)
